refactor(processing): remove legacy process task chain